# almagest

./: .coderabbit.yaml  .copier-answers.yml  .dockerignore  .gitignore  Dockerfile  README.md  consumer-evidence.macos.json.example  consumer-evidence.windows.json.example  host-bindings.macos.json.example  host-bindings.windows.json.example  pyproject.toml  registry.mac-local.json.example  registry.shared.json.example  skills.json.example
.github/workflows/: ci.yml  release.yml
docs/: INDEX.md  architecture.md  inventory-contract.md  registry-contract.md  source-resolution-contract.md
requirements/ERI-937-agent-config-control-plane/: acceptance.md  design.md  evidence.md  implementation-notes.md  requirement.yaml
requirements/ERI-937-agent-config-control-plane/capture/: product-direction-2026-07-17.md  user-goal.md
scripts/: almagest_entry.py  build-release.sh
src/almagest/: __init__.py  cli.py  config.py  inventory.py  registry.py  skills.py  source.py  telemetry.py
src/almagest/adapters/: __init__.py  base.py  claude.py  codex.py  qodercli.py
tests/: test_cli.py  test_config.py  test_inventory.py  test_registry.py  test_telemetry.py
tests/fixtures/inventory/: compatibility.json
